package bo.edu.usfx.biblioteca.dominio.roles;
public interface Descargable { 
    byte[] descargarPdf(); 
}
