package bo.edu.usfx.biblioteca.dominio.roles;
public interface Distribuible { 
    void enviarPorCorreo(String destinatario); 
}
