
package bo.edu.usfx.biblioteca.infraestructura;

/**
 *
 * @author LLDC
 */
public class RepositorioPrestamosJdbc {
    
}
